# CLICKAI

./: ALL_CODE_DUMP.txt  README.md  all_code_file_list.txt  build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/mycompany/tap/: ITapService.aidl
app/src/main/cpp/: CMakeLists.txt  match_template.cpp
app/src/main/java/com/clickai/macroapp/: MainActivity.kt
app/src/main/java/com/clickai/macroapp/corrections/: CorrectionDialog.kt  CorrectionsManagerActivity.kt
app/src/main/java/com/clickai/macroapp/scripting/: ScriptStorage.kt  ScriptingEngine.kt
app/src/main/java/com/clickai/macroapp/vision/: ImageHashUtil.kt  ScreenCaptureUtil.kt  ScreenRecognizer.kt  TemplateStorage.kt
app/src/main/java/com/mycompany/autoclicker/: App.kt  MainActivity.kt  ScreenGrabber.kt  UX.kt
app/src/main/java/com/mycompany/autoclicker/cv/: ColorDetector.kt  (+1 more)
app/src/main/res/drawable/: ic_rocket.xml
app/src/main/res/layout/: activity_corrections_manager.xml  activity_main.xml  activity_main_advanced.xml  activity_pattern_editor.xml  activity_recorder.xml  advanced_control_panel.xml  correction_list_item.xml  dialog_action_editor.xml  dialog_correction.xml  dialog_element_selection.xml  item_delay.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
docs/: README.txt  autoclicker_analysis_and_enhancements.md  implementation_summary.md
(+26 files in other folders)
